<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="F_SAFETY_StatusFB_TO_OPMODE" Id="{b56a960b-cfd1-45e5-8235-b04b300e6766}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_SAFETY_StatusFB_TO_OPMODE : ST_SAFETY_FBOPMODE
VAR_INPUT
	stFBStatus						: ST_SAFETY_FBStatus; 	(* Struktura ogolna *)
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_SAFETY_StatusFB_TO_OPMODE.uStatus.stStatusWords	:= stFBStatus;									(* Przepisanie *)
F_SAFETY_StatusFB_TO_OPMODE.eState 					:= stFBStatus.BState;							(* Ustawienie enum *)
F_SAFETY_StatusFB_TO_OPMODE.bGeneralError			:= stFBStatus.wDiagnosis <> 0;					(* General Error *)]]></ST>
    </Implementation>
    <LineIds Name="F_SAFETY_StatusFB_TO_OPMODE">
      <LineId Id="3" Count="1" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>